language pro/lab work/pr/LP_Project/compiler.output
Terminals unused in grammar

   EOL


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | program statements

    3 statements: declare_stmt
    4           | assignment_stmt
    5           | if_stmt
    6           | while_stmt
    7           | '{' program '}'

    8 if_stmt: IF '(' exp ')' statements
    9        | IF '(' exp ')' statements ELSE statements

   10 while_stmt: WHILE '(' exp ')' statements

   11 declare_stmt: INT ID ';'
   12             | INT ID '=' exp ';'
   13             | UINT ID ';'
   14             | UINT ID '=' exp ';'
   15             | BOOL ID ';'
   16             | BOOL ID '=' TR ';'
   17             | BOOL ID '=' FL ';'

   18 assignment_stmt: ID '=' exp ';'
   19                | ID PLEQ exp ';'
   20                | ID SBEQ exp ';'
   21                | ID MLEQ exp ';'
   22                | ID DVEQ exp ';'

   23 exp: exp '|' exp
   24    | exp '&' exp
   25    | exp '^' exp
   26    | '~' exp
   27    | exp '+' exp
   28    | exp '-' exp
   29    | exp '*' exp
   30    | exp '/' exp
   31    | exp '%' exp
   32    | exp LOR exp
   33    | exp LAND exp
   34    | exp GREQ exp
   35    | exp LSEQ exp
   36    | exp GRTH exp
   37    | exp LSTH exp
   38    | exp EQEQ exp
   39    | exp NOTEQ exp
   40    | LNOT exp
   41    | '(' exp ')'
   42    | ID
   43    | TR
   44    | FL
   45    | NUM


Terminals, with rules where they appear

$end (0) 0
'%' (37) 31
'&' (38) 24
'(' (40) 8 9 10 41
')' (41) 8 9 10 41
'*' (42) 29
'+' (43) 27
'-' (45) 28
'/' (47) 30
';' (59) 11 12 13 14 15 16 17 18 19 20 21 22
'=' (61) 12 14 16 17 18
'^' (94) 25
'{' (123) 7
'|' (124) 23
'}' (125) 7
'~' (126) 26
error (256)
NUM (258) 45
ID (259) 11 12 13 14 15 16 17 18 19 20 21 22 42
EOL (260)
INT (261) 11 12
UINT (262) 13 14
BOOL (263) 15 16 17
TR (264) 16 43
FL (265) 17 44
IF (266) 8 9
WHILE (267) 10
IFX (268)
ELSE (269) 9
PLEQ (270) 19
SBEQ (271) 20
MLEQ (272) 21
DVEQ (273) 22
GREQ (274) 34
LSEQ (275) 35
GRTH (276) 36
LSTH (277) 37
EQEQ (278) 38
NOTEQ (279) 39
LOR (280) 32
LNOT (281) 40
LAND (282) 33


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1 2, on right: 0 2 7
statements (45)
    on left: 3 4 5 6 7, on right: 2 8 9 10
if_stmt (46)
    on left: 8 9, on right: 5
while_stmt (47)
    on left: 10, on right: 6
declare_stmt (48)
    on left: 11 12 13 14 15 16 17, on right: 3
assignment_stmt (49)
    on left: 18 19 20 21 22, on right: 4
exp (50)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45, on right: 8 9 10 12 14 18 19 20 21 22 23 24 25
    26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    2 program: program . statements

    $end   shift, and go to state 2
    ID     shift, and go to state 3
    INT    shift, and go to state 4
    UINT   shift, and go to state 5
    BOOL   shift, and go to state 6
    IF     shift, and go to state 7
    WHILE  shift, and go to state 8
    '{'    shift, and go to state 9

    statements       go to state 10
    if_stmt          go to state 11
    while_stmt       go to state 12
    declare_stmt     go to state 13
    assignment_stmt  go to state 14


State 2

    0 $accept: program $end .

    $default  accept


State 3

   18 assignment_stmt: ID . '=' exp ';'
   19                | ID . PLEQ exp ';'
   20                | ID . SBEQ exp ';'
   21                | ID . MLEQ exp ';'
   22                | ID . DVEQ exp ';'

    PLEQ  shift, and go to state 15
    SBEQ  shift, and go to state 16
    MLEQ  shift, and go to state 17
    DVEQ  shift, and go to state 18
    '='   shift, and go to state 19


State 4

   11 declare_stmt: INT . ID ';'
   12             | INT . ID '=' exp ';'

    ID  shift, and go to state 20


State 5

   13 declare_stmt: UINT . ID ';'
   14             | UINT . ID '=' exp ';'

    ID  shift, and go to state 21


State 6

   15 declare_stmt: BOOL . ID ';'
   16             | BOOL . ID '=' TR ';'
   17             | BOOL . ID '=' FL ';'

    ID  shift, and go to state 22


State 7

    8 if_stmt: IF . '(' exp ')' statements
    9        | IF . '(' exp ')' statements ELSE statements

    '('  shift, and go to state 23


State 8

   10 while_stmt: WHILE . '(' exp ')' statements

    '('  shift, and go to state 24


State 9

    7 statements: '{' . program '}'

    $default  reduce using rule 1 (program)

    program  go to state 25


State 10

    2 program: program statements .

    $default  reduce using rule 2 (program)


State 11

    5 statements: if_stmt .

    $default  reduce using rule 5 (statements)


State 12

    6 statements: while_stmt .

    $default  reduce using rule 6 (statements)


State 13

    3 statements: declare_stmt .

    $default  reduce using rule 3 (statements)


State 14

    4 statements: assignment_stmt .

    $default  reduce using rule 4 (statements)


State 15

   19 assignment_stmt: ID PLEQ . exp ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 33


State 16

   20 assignment_stmt: ID SBEQ . exp ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 34


State 17

   21 assignment_stmt: ID MLEQ . exp ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 35


State 18

   22 assignment_stmt: ID DVEQ . exp ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 36


State 19

   18 assignment_stmt: ID '=' . exp ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 37


State 20

   11 declare_stmt: INT ID . ';'
   12             | INT ID . '=' exp ';'

    '='  shift, and go to state 38
    ';'  shift, and go to state 39


State 21

   13 declare_stmt: UINT ID . ';'
   14             | UINT ID . '=' exp ';'

    '='  shift, and go to state 40
    ';'  shift, and go to state 41


State 22

   15 declare_stmt: BOOL ID . ';'
   16             | BOOL ID . '=' TR ';'
   17             | BOOL ID . '=' FL ';'

    '='  shift, and go to state 42
    ';'  shift, and go to state 43


State 23

    8 if_stmt: IF '(' . exp ')' statements
    9        | IF '(' . exp ')' statements ELSE statements

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 44


State 24

   10 while_stmt: WHILE '(' . exp ')' statements

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 45


State 25

    2 program: program . statements
    7 statements: '{' program . '}'

    ID     shift, and go to state 3
    INT    shift, and go to state 4
    UINT   shift, and go to state 5
    BOOL   shift, and go to state 6
    IF     shift, and go to state 7
    WHILE  shift, and go to state 8
    '{'    shift, and go to state 9
    '}'    shift, and go to state 46

    statements       go to state 10
    if_stmt          go to state 11
    while_stmt       go to state 12
    declare_stmt     go to state 13
    assignment_stmt  go to state 14


State 26

   45 exp: NUM .

    $default  reduce using rule 45 (exp)


State 27

   42 exp: ID .

    $default  reduce using rule 42 (exp)


State 28

   43 exp: TR .

    $default  reduce using rule 43 (exp)


State 29

   44 exp: FL .

    $default  reduce using rule 44 (exp)


State 30

   40 exp: LNOT . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 47


State 31

   26 exp: '~' . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 48


State 32

   41 exp: '(' . exp ')'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 49


State 33

   19 assignment_stmt: ID PLEQ exp . ';'
   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 66


State 34

   20 assignment_stmt: ID SBEQ exp . ';'
   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 67


State 35

   21 assignment_stmt: ID MLEQ exp . ';'
   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 68


State 36

   22 assignment_stmt: ID DVEQ exp . ';'
   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 69


State 37

   18 assignment_stmt: ID '=' exp . ';'
   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 70


State 38

   12 declare_stmt: INT ID '=' . exp ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 71


State 39

   11 declare_stmt: INT ID ';' .

    $default  reduce using rule 11 (declare_stmt)


State 40

   14 declare_stmt: UINT ID '=' . exp ';'

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 72


State 41

   13 declare_stmt: UINT ID ';' .

    $default  reduce using rule 13 (declare_stmt)


State 42

   16 declare_stmt: BOOL ID '=' . TR ';'
   17             | BOOL ID '=' . FL ';'

    TR  shift, and go to state 73
    FL  shift, and go to state 74


State 43

   15 declare_stmt: BOOL ID ';' .

    $default  reduce using rule 15 (declare_stmt)


State 44

    8 if_stmt: IF '(' exp . ')' statements
    9        | IF '(' exp . ')' statements ELSE statements
   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ')'    shift, and go to state 75


State 45

   10 while_stmt: WHILE '(' exp . ')' statements
   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ')'    shift, and go to state 76


State 46

    7 statements: '{' program '}' .

    $default  reduce using rule 7 (statements)


State 47

   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp
   40    | LNOT exp .

    LAND  shift, and go to state 57
    '|'   shift, and go to state 58
    '^'   shift, and go to state 59
    '&'   shift, and go to state 60
    '+'   shift, and go to state 61
    '-'   shift, and go to state 62
    '*'   shift, and go to state 63
    '/'   shift, and go to state 64
    '%'   shift, and go to state 65

    $default  reduce using rule 40 (exp)


State 48

   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   26    | '~' exp .
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64
    '%'  shift, and go to state 65

    $default  reduce using rule 26 (exp)


State 49

   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp
   41    | '(' exp . ')'

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ')'    shift, and go to state 77


State 50

   34 exp: exp GREQ . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 78


State 51

   35 exp: exp LSEQ . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 79


State 52

   36 exp: exp GRTH . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 80


State 53

   37 exp: exp LSTH . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 81


State 54

   38 exp: exp EQEQ . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 82


State 55

   39 exp: exp NOTEQ . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 83


State 56

   32 exp: exp LOR . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 84


State 57

   33 exp: exp LAND . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 85


State 58

   23 exp: exp '|' . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 86


State 59

   25 exp: exp '^' . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 87


State 60

   24 exp: exp '&' . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 88


State 61

   27 exp: exp '+' . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 89


State 62

   28 exp: exp '-' . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 90


State 63

   29 exp: exp '*' . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 91


State 64

   30 exp: exp '/' . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 92


State 65

   31 exp: exp '%' . exp

    NUM   shift, and go to state 26
    ID    shift, and go to state 27
    TR    shift, and go to state 28
    FL    shift, and go to state 29
    LNOT  shift, and go to state 30
    '~'   shift, and go to state 31
    '('   shift, and go to state 32

    exp  go to state 93


State 66

   19 assignment_stmt: ID PLEQ exp ';' .

    $default  reduce using rule 19 (assignment_stmt)


State 67

   20 assignment_stmt: ID SBEQ exp ';' .

    $default  reduce using rule 20 (assignment_stmt)


State 68

   21 assignment_stmt: ID MLEQ exp ';' .

    $default  reduce using rule 21 (assignment_stmt)


State 69

   22 assignment_stmt: ID DVEQ exp ';' .

    $default  reduce using rule 22 (assignment_stmt)


State 70

   18 assignment_stmt: ID '=' exp ';' .

    $default  reduce using rule 18 (assignment_stmt)


State 71

   12 declare_stmt: INT ID '=' exp . ';'
   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 94


State 72

   14 declare_stmt: UINT ID '=' exp . ';'
   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    GREQ   shift, and go to state 50
    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ';'    shift, and go to state 95


State 73

   16 declare_stmt: BOOL ID '=' TR . ';'

    ';'  shift, and go to state 96


State 74

   17 declare_stmt: BOOL ID '=' FL . ';'

    ';'  shift, and go to state 97


State 75

    8 if_stmt: IF '(' exp ')' . statements
    9        | IF '(' exp ')' . statements ELSE statements

    ID     shift, and go to state 3
    INT    shift, and go to state 4
    UINT   shift, and go to state 5
    BOOL   shift, and go to state 6
    IF     shift, and go to state 7
    WHILE  shift, and go to state 8
    '{'    shift, and go to state 9

    statements       go to state 98
    if_stmt          go to state 11
    while_stmt       go to state 12
    declare_stmt     go to state 13
    assignment_stmt  go to state 14


State 76

   10 while_stmt: WHILE '(' exp ')' . statements

    ID     shift, and go to state 3
    INT    shift, and go to state 4
    UINT   shift, and go to state 5
    BOOL   shift, and go to state 6
    IF     shift, and go to state 7
    WHILE  shift, and go to state 8
    '{'    shift, and go to state 9

    statements       go to state 99
    if_stmt          go to state 11
    while_stmt       go to state 12
    declare_stmt     go to state 13
    assignment_stmt  go to state 14


State 77

   41 exp: '(' exp ')' .

    $default  reduce using rule 41 (exp)


State 78

   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   34    | exp GREQ exp .
   35    | exp . LSEQ exp
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp

    LSEQ   shift, and go to state 51
    GRTH   shift, and go to state 52
    LSTH   shift, and go to state 53
    EQEQ   shift, and go to state 54
    NOTEQ  shift, and go to state 55
    LOR    shift, and go to state 56
    LAND   shift, and go to state 57
    '|'    shift, and go to state 58
    '^'    shift, and go to state 59
    '&'    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65

    $default  reduce using rule 34 (exp)


State 79

   23 exp: exp . '|' exp
   24    | exp . '&' exp
   25    | exp . '^' exp
   27    | exp . '+' exp
   28    | exp . '-' exp
   29    | exp . '*' exp
   30    | exp . '/' exp
   31    | exp . '%' exp
   32    | exp . LOR exp
   33    | exp . LAND exp
   34    | exp . GREQ exp
   35    | exp . LSEQ exp
   35    | exp LSEQ exp .
   36    | exp . GRTH exp
   37    | exp . LSTH exp
   38    | exp . EQEQ exp
   39    | exp . NOTEQ exp
